<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- 公用 -->
    <string name="app_name">移动护理</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="back">返回</string>
    <string name="loading">正在加载..</string>
    <string name="ensure">确定</string>
    <string name="cancle">取消</string>
    <string name="bed">床</string>
    <string name="alert">提醒</string>
    <string name="service_config">服务配置</string>
    <string name="service_ip">移动医疗服务地址</string>
    <string name="service_nsis_ip">NSIS服务地址</string>
    <string name="select_office">选择科室</string>

    <!-- 数字弹出框 -->
    <string name="number_erase">←</string>
    <string name="number_1">1</string>
    <string name="number_2">2</string>
    <string name="number_3">3</string>
    <string name="number_4">4</string>
    <string name="number_5">5</string>
    <string name="number_6">6</string>
    <string name="number_7">7</string>
    <string name="number_8">8</string>
    <string name="number_9">9</string>
    <string name="number_0">0</string>
    <string name="number_20">20</string>
    <string name="number_30">30</string>
    <string name="number_40">40</string>
    <string name="number_50">50</string>
    <string name="number_60">60</string>
    <string name="number_70">70</string>
    <string name="number_80">80</string>
    <string name="number_90">90</string>
    <string name="number_100">100</string>
    <string name="none_speed">无滴速</string>
    <string name="number_point">.</string>
    <string name="last_item">上一项</string>
    <string name="next_item">下一项</string>

    <!-- 时间选择框 -->
    <string name="hour">时</string>
    <string name="minute">分</string>

    <!-- 登陆界面 -->
    <string name="copyright">Copyright © 2013~2015 Buzzlysoft. All Rights Reserved.</string>
    <string name="login_title_big_text">移动护理</string>
    <string name="login_title_small_text">西安交通大学第一附属医院</string>
    <string name="login">登陆</string>
    <string name="username_hint">请选择用户名</string>
    <string name="password_hint">请输入密码</string>
    <string name="select_user">选择用户</string>

    <!-- 左侧菜单 -->
    <string name="homepage">首页</string>
    <string name="patientinfo">病患详细</string>
    <string name="nursingrecord">护理录入</string>
    <string name="dropexecute">静滴执行</string>
    <string name="nursinglist">静滴清单</string>
    <string name="nursingpatrol">护理巡视</string>
    <string name="setting">设置</string>
    <string name="quit">退出登录</string>

    <!-- 首页 -->
    <string name="allpatient">总病患</string>
    <string name="inpatient">今日入院</string>
    <string name="outpatient">今日出院</string>
    <string name="tomorrowpatient">明日出院</string>
    <string name="waitpatient">无床等待</string>
    <string name="operatpatient">今日手术</string>
    <string name="speciallevelpatient">特护</string>
    <string name="onelevelpatient">I级护理</string>
    <string name="twolevelpatient">II级护理</string>
    <string name="threelevelpatient">III级护理</string>
    <string name="people">人</string>
    <string name="infocenter">消息中心</string>

    <!-- 病患信息 -->
    <string name="base">基础</string>
    <string name="todayorder">今日医嘱</string>
    <string name="exam">检验</string>
    <string name="cost">费用</string>

    <!-- 基础 -->
    <string name="baseinfo">基本信息</string>
    <string name="bedno">床号：</string>
    <string name="inhos">住院号：</string>
    <string name="name">姓名：</string>
    <string name="age">年龄：</string>
    <string name="sex">性别：</string>
    <string name="born">出生：</string>
    <string name="prepaid">预交：</string>
    <string name="balance">余额：</string>
    <string name="payway">缴费方式：</string>
    <string name="inhosinfo">住院信息</string>
    <string name="inhosdate">入院时间：</string>
    <string name="illnessstate">病情：</string>
    <string name="day">天数：</string>
    <string name="inhosday">住院天数：</string>
    <string name="times">次数：</string>
    <string name="inhostimes">住院次数：</string>
    <string name="doctor">医师：</string>
    <string name="nurse">护士：</string>
    <string name="diagnosis">诊断：</string>
    <string name="allergichistory">过敏史：</string>
    <string name="info_first_patient">已经到第一名病患了！</string>
    <string name="info_last_patient">已经到最后一名病患了！</string>

    <!-- 医嘱 -->
    <string name="longorder">长期医嘱</string>
    <string name="temporder">临时医嘱</string>
    <string name="order_all">共</string>
    <string name="order_long">条长期医嘱，已执行</string>
    <string name="order_exec">条，未执行</string>
    <string name="order_unexec">条</string>
    <string name="order_name">名称：</string>
    <string name="order_usage">用量用法：</string>
    <string name="order_type">类型：</string>
    <string name="order_frequence">频次：</string>
    <string name="order_time">开医嘱日期：</string>
    <string name="zero">0</string>

    <!-- 检验 -->
    <string name="item">项目</string>
    <string name="result">结果</string>

    <!-- 花费 -->
    <string name="cost_all">花费：</string>
    <string name="cost_prepaid">预交：</string>
    <string name="cost_balance">余额：</string>

    <!-- 护理录入 -->
    <string name="temperature_paper">体温单</string>
    <string name="blood_oxygen">血氧</string>
    <string name="blood_suger">血糖</string>
    <string name="blood_pressure">血压</string>

    <!-- 体温单 -->
    <string name="temperaturewithdegree">体温（°C）</string>
    <string name="breath">呼吸（次/分）</string>
    <string name="pulse">脉搏（次/分）</string>
    <string name="sp02">SP02（%）</string>
    <string name="heartrate">心率（次/分）</string>
    <string name="s_pressure">收缩压(mmHg)</string>
    <string name="d_pressure">舒张压(mmHg)</string>
    <string name="height">身高（cm）</string>
    <string name="weight">体重（kg）</string>
    <string name="nursingrecord_all">全部</string>
    <string name="nursingrecord_normal">正常</string>
    <string name="nursingrecord_add4">加测4</string>
    <string name="nursingrecord_add6">加测6</string>
    <string name="nursingrecord_bed">床号</string>
    <string name="nursingrecord_name">姓名</string>
    <string name="select_time">选择时间</string>
    <string name="nursingrecord_3">3</string>
    <string name="nursingrecord_7">7</string>
    <string name="nursingrecord_11">11</string>
    <string name="nursingrecord_15">15</string>
    <string name="nursingrecord_19">19</string>
    <string name="nursingrecord_23">23</string>
    <string name="temperature">体温</string>
    <string name="inandout">出入量</string>
    <string name="tchart">体温图</string>
    <string name="time">时间：</string>
    <string name="axillary_t">腋温</string>
    <string name="forehead_t">额温</string>
    <string name="anus_t">肛温</string>
    <string name="mouth_t">腔温</string>
    <string name="lower_the_temperature">降温</string>
    <string name="leave">请假</string>
    <string name="go_out">外出</string>
    <string name="refuse">拒测</string>
    <string name="ltt_way">降温方式</string>
    <string name="physical_ltt">物理降温</string>
    <string name="medical_ltt">吃药</string>
    <string name="high"> / </string>
    <string name="low">低</string>
    <string name="orderstate_text">医嘱状态</string>
    <string name="times_text">次数</string>
    <string name="executed_text">已执行</string>
    <string name="state_text">状态</string>
    <string name="save_to">保存到</string>
    <string name="temperrecord">体温单录入</string>
    <string name="bloodxygenrecord">血氧录入</string>
    <string name="bloodsugerrecord">血糖录入</string>
    <string name="bloodpressurerecord">血压录入</string>
    <string name="bloodoxygenrecord">血氧饱和度</string>

    <!-- 医嘱执行 -->
    <string name="orderexec_total">总数：</string>
    <string name="orderexec_executed">已执行：</string>
    <string name="orderexec_noexecuted">未执行：</string>
    <string name="orderexec_total_text">总数</string>
    <string name="orderexec_executed_text">已执行</string>
    <string name="orderexec_noexecuted_text">未执行</string>
    <string name="state">状态</string>
    <string name="exe_time">执行时间：</string>
    
    <!-- 静滴清单 -->
    <string name="dropdetail">静滴详细</string>

    <!-- 护理巡视 -->
    <string name="droppatrol">静滴巡视</string>
    <string name="patrol_time_text">巡视时间</string>
    <string name="patrol_person">巡视人</string>
    <string name="patrol_start_time">开始时间：</string>
    <string name="patrol_content">医嘱内容：</string>
    <string name="patrol_drop_speed">滴速：</string>
    <string name="patrol_time">巡视时间：</string>
    <string name="set_speed">设置滴速</string>
    
    

    <!-- 设置 -->
    <string name="change_pwd">修改密码</string>
    <string name="now_pwd">当前密码</string>
    <string name="new_pwd">新密码</string>
    <string name="ensure_pwd">确认密码</string>
    <string name="save">保存</string>
    <string name="exit_sure">确认退出登陆吗？</string>

    <!-- 修改头像 -->
    <string name="photo">拍照</string>
    <string name="picture">从手机相册选择</string>

</resources>