<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/transparent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/nursingrecord_temperature_form_head_height"
        android:orientation="horizontal"
        android:paddingLeft="6dp" >

        <TextView
            android:id="@+id/tv_item"
            android:layout_width="@dimen/exam_item_width"
            android:layout_height="match_parent"
            android:gravity="left|center_vertical"
            android:paddingLeft="10dp"
            android:singleLine="true"
            android:text="@string/nursingrecord_bed"
            android:textColor="@color/bottom_tab_text"
            android:textSize="@dimen/nursingrecord_temperature_form_head_textsize" />

        <TextView
            android:id="@+id/tv_result"
            android:layout_width="@dimen/exam_result_width"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/nursingrecord_name"
            android:textColor="@color/bottom_tab_text"
            android:textSize="@dimen/nursingrecord_temperature_form_head_textsize" />

        <TextView
            android:id="@+id/tv_state"
            android:layout_width="@dimen/exam_state_width"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/orderexec_total_text"
            android:textColor="@color/bottom_tab_text"
            android:textSize="@dimen/nursingrecord_temperature_form_head_textsize" />
    </LinearLayout>

</LinearLayout>