<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:thr="http://schemas.android.com/apk/res/com.thr.mobilemedical"
    android:id="@+id/ll_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/patientinfo_bg"
    android:orientation="vertical" >

    <com.thr.view.TitleBar
        android:id="@+id/titlebar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/titlebar_height"
        thr:titleText="@string/temperrecord" />

    <include
        android:id="@+id/in_topbar"
        layout="@layout/patientinfo_top_selectbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/patientinfo_select_height"
        android:layout_marginLeft="@dimen/patientinfo_base_margin"
        android:layout_marginRight="@dimen/patientinfo_base_margin"
        android:background="@drawable/patientinfo_order_longtempbar_bg"
        android:orientation="horizontal" >

        <LinearLayout
            android:id="@+id/ll_temperaturetab"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/tv_temperature"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/temperature"
                android:textColor="@color/login_btn_bg_normal"
                android:textSize="@dimen/patientinfo_select_text_size" />

            <View
                android:id="@+id/v_temperature"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="@dimen/patientinfo_order_select_line_marginleft"
                android:layout_marginRight="@dimen/patientinfo_order_select_line_marginleft"
                android:background="@color/login_btn_bg_normal" />
        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/patient_item_space_bg" />

        <LinearLayout
            android:id="@+id/ll_inandouttab"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/tv_inandout"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/inandout"
                android:textColor="@color/bottom_tab_text"
                android:textSize="@dimen/patientinfo_select_text_size" />

            <View
                android:id="@+id/v_inandout"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="@dimen/patientinfo_order_select_line_marginleft"
                android:layout_marginRight="@dimen/patientinfo_order_select_line_marginleft"
                android:background="@color/login_btn_bg_normal"
                android:visibility="invisible" />
        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/nursingrecord_tchart_height"
        android:paddingRight="18dp"
        android:visibility="gone" >

        <TextView
            android:id="@+id/tv_tchart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:text="@string/tchart"
            android:textColor="@color/homepage_conent_text"
            android:textSize="12sp" />

        <ImageView
            android:id="@+id/iv_tchart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginRight="3dp"
            android:layout_toLeftOf="@id/tv_tchart"
            android:src="@drawable/icon_twt" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:paddingBottom="10dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/patientinfo_base_margin"
            android:layout_marginRight="@dimen/patientinfo_base_margin"
            android:background="@drawable/nursingrecorddetail_block_bg"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/ll_temperature"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/nursingrecord_line_height"
                    android:gravity="center_vertical"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/time"
                        android:textColor="@color/patientinfo_base_item_leftpart_text"
                        android:textSize="@dimen/nursingrecord_textsize" />

                    <TextView
                        android:id="@+id/tv_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="10dp"
                        android:textColor="@color/patientinfo_base_item_rightpart_text"
                        android:textSize="@dimen/nursingrecord_textsize" />

                    <TextView
                        android:id="@+id/tv_time"
                        android:layout_width="@dimen/nursingrecord_edit_width"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="@dimen/nursingrecord_edit_marginleft"
                        android:background="@drawable/setting_edit_bg"
                        android:drawableRight="@drawable/arrow_down"
                        android:gravity="center"
                        android:paddingRight="5dp"
                        android:textColor="@color/patientinfo_base_item_rightpart_text"
                        android:textSize="@dimen/nursingrecord_textsize" />
                </LinearLayout>

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/nursingrecord_line_height"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:visibility="visible" >

                    <RadioButton
                        android:id="@+id/rb_axillary"
                        style="@style/my_checkbox_style"
                        android:layout_width="@dimen/nursingrecord_radiobtn_width"
                        android:layout_height="match_parent"
                        android:paddingLeft="@dimen/nursingrecord_radiobtn_drawable_padding"
                        android:text="@string/axillary_t"
                        android:textColor="@color/patientinfo_base_item_rightpart_text"
                        android:textSize="@dimen/nursingrecord_textsize" />

                    <RadioButton
                        style="@style/my_checkbox_style"
                        android:layout_width="@dimen/nursingrecord_radiobtn_width"
                        android:layout_height="match_parent"
                        android:drawablePadding="@dimen/nursingrecord_radiobtn_drawable_padding"
                        android:paddingLeft="@dimen/nursingrecord_radiobtn_drawable_padding"
                        android:text="@string/forehead_t"
                        android:textColor="@color/patientinfo_base_item_rightpart_text"
                        android:textSize="@dimen/nursingrecord_textsize" />

                    <RadioButton
                        style="@style/my_checkbox_style"
                        android:layout_width="@dimen/nursingrecord_radiobtn_width"
                        android:layout_height="match_parent"
                        android:drawablePadding="@dimen/nursingrecord_radiobtn_drawable_padding"
                        android:paddingLeft="@dimen/nursingrecord_radiobtn_drawable_padding"
                        android:text="@string/anus_t"
                        android:textColor="@color/patientinfo_base_item_rightpart_text"
                        android:textSize="@dimen/nursingrecord_textsize" />

                    <RadioButton
                        style="@style/my_checkbox_style"
                        android:layout_width="@dimen/nursingrecord_radiobtn_width"
                        android:layout_height="match_parent"
                        android:drawablePadding="@dimen/nursingrecord_radiobtn_drawable_padding"
                        android:paddingLeft="@dimen/nursingrecord_radiobtn_drawable_padding"
                        android:text="@string/mouth_t"
                        android:textColor="@color/patientinfo_base_item_rightpart_text"
                        android:textSize="@dimen/nursingrecord_textsize" />
                </RadioGroup>

                <LinearLayout
                    android:id="@+id/ll_nursingrecordfiled"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >
                </LinearLayout>

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/nursingrecord_line_height"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:visibility="gone" >

                    <RadioButton
                        android:id="@+id/rb_ltt"
                        style="@style/my_checkbox_style"
                        android:layout_width="@dimen/nursingrecord_radiobtn_width"
                        android:layout_height="match_parent"
                        android:paddingLeft="@dimen/nursingrecord_radiobtn_drawable_padding"
                        android:text="@string/lower_the_temperature"
                        android:textColor="@color/patientinfo_base_item_rightpart_text"
                        android:textSize="@dimen/nursingrecord_textsize" />

                    <RadioButton
                        style="@style/my_checkbox_style"
                        android:layout_width="@dimen/nursingrecord_radiobtn_width"
                        android:layout_height="match_parent"
                        android:drawablePadding="@dimen/nursingrecord_radiobtn_drawable_padding"
                        android:paddingLeft="@dimen/nursingrecord_radiobtn_drawable_padding"
                        android:text="@string/leave"
                        android:textColor="@color/patientinfo_base_item_rightpart_text"
                        android:textSize="@dimen/nursingrecord_textsize" />

                    <RadioButton
                        style="@style/my_checkbox_style"
                        android:layout_width="@dimen/nursingrecord_radiobtn_width"
                        android:layout_height="match_parent"
                        android:drawablePadding="@dimen/nursingrecord_radiobtn_drawable_padding"
                        android:paddingLeft="@dimen/nursingrecord_radiobtn_drawable_padding"
                        android:text="@string/go_out"
                        android:textColor="@color/patientinfo_base_item_rightpart_text"
                        android:textSize="@dimen/nursingrecord_textsize" />

                    <RadioButton
                        style="@style/my_checkbox_style"
                        android:layout_width="@dimen/nursingrecord_radiobtn_width"
                        android:layout_height="match_parent"
                        android:drawablePadding="@dimen/nursingrecord_radiobtn_drawable_padding"
                        android:paddingLeft="@dimen/nursingrecord_radiobtn_drawable_padding"
                        android:text="@string/refuse"
                        android:textColor="@color/patientinfo_base_item_rightpart_text"
                        android:textSize="@dimen/nursingrecord_textsize" />
                </RadioGroup>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/nursingrecord_line_height"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:visibility="gone" >

                    <TextView
                        android:layout_width="@dimen/nursingrecord_radiobtn_width"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:text="@string/ltt_way"
                        android:textColor="@color/patientinfo_base_item_leftpart_text"
                        android:textSize="@dimen/nursingrecord_textsize" />

                    <RadioGroup
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/nursingrecord_line_height"
                        android:gravity="center_vertical"
                        android:orientation="horizontal" >

                        <RadioButton
                            style="@style/my_checkbox_style"
                            android:layout_width="@dimen/nursingrecord_radiobtn_width"
                            android:layout_height="match_parent"
                            android:paddingLeft="@dimen/nursingrecord_radiobtn_drawable_padding"
                            android:text="@string/physical_ltt"
                            android:textColor="@color/patientinfo_base_item_rightpart_text"
                            android:textSize="@dimen/nursingrecord_textsize" />

                        <RadioButton
                            style="@style/my_checkbox_style"
                            android:layout_width="@dimen/nursingrecord_radiobtn_width"
                            android:layout_height="match_parent"
                            android:drawablePadding="@dimen/nursingrecord_radiobtn_drawable_padding"
                            android:paddingLeft="@dimen/nursingrecord_radiobtn_drawable_padding"
                            android:text="@string/medical_ltt"
                            android:textColor="@color/patientinfo_base_item_rightpart_text"
                            android:textSize="@dimen/nursingrecord_textsize" />
                    </RadioGroup>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_inandout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone" >
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/nursingrecord_line_height"
                android:layout_marginTop="@dimen/nursingrecord_item_margintop"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="@dimen/nursingrecord_radiobtn_width"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/save_to"
                    android:textColor="@color/patientinfo_base_item_leftpart_text"
                    android:textSize="@dimen/nursingrecord_textsize" />

                <TextView
                    android:id="@+id/tv_saveto"
                    android:layout_width="130dp"
                    android:layout_height="match_parent"
                    android:background="@drawable/setting_edit_bg"
                    android:drawableRight="@drawable/arrow_down"
                    android:gravity="center"
                    android:paddingRight="5dp"
                    android:textColor="@color/patientinfo_base_item_rightpart_text"
                    android:textSize="@dimen/nursingrecord_textsize" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/nursingrecord_line_height"
                android:layout_marginTop="10dp"
                android:gravity="center" >

                <Button
                    android:id="@+id/btn_save"
                    android:layout_width="150dp"
                    android:layout_height="34dp"
                    android:background="@drawable/nursingrecord_save_btn_bg"
                    android:text="@string/save"
                    android:textColor="@color/white"
                    android:textSize="16sp" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>